trying another fix for nav bar bug on mobile

--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ body {
 nav {
     display: flex;
     align-items: center;
-    justify-content: space-between  ;
+    justify-content: space-between;
     color: white;
     padding: 15px;
     font-size: 20px;
@@ -131,7 +131,7 @@ nav {
 .search {
     background-color: var(--secondary-color);
     border-radius: 3px;
-    border:none;
+    border: none;
     padding: 10px;
     cursor: pointer;
 
@@ -142,20 +142,21 @@ nav {
     display: inline-block;
     width: 60px;
     height: 34px;
-  }
-  
+}
+
 .switchContainer {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-  .switch input {
+
+.switch input {
     opacity: 0;
     width: 0;
     height: 0;
-  }
-  
-  .slider {
+}
+
+.slider {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -165,9 +166,9 @@ nav {
     background-color: #ccc;
     -webkit-transition: .4s;
     transition: .4s;
-  }
-  
-  .slider:before {
+}
+
+.slider:before {
     position: absolute;
     content: "";
     height: 26px;
@@ -177,21 +178,21 @@ nav {
     background-color: white;
     -webkit-transition: .4s;
     transition: .4s;
-  }
-  
-  input:checked + .slider {
+}
+
+input:checked+.slider {
     background-color: #2196F3;
-  }
-  
-  input:focus + .slider {
+}
+
+input:focus+.slider {
     box-shadow: 0 0 1px #2196F3;
-  }
-  
-  input:checked + .slider:before {
+}
+
+input:checked+.slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
-  }
+}
 
 form {
     text-align: center;
@@ -205,26 +206,26 @@ input {
     padding: 10px;
 }
 
-.switchContainer > p {
+.switchContainer>p {
     padding: 10px;
 }
 
 .slider.round {
     border-radius: 34px;
-  }
-  
-  .slider.round:before {
+}
+
+.slider.round:before {
     border-radius: 50%;
-  }
+}
 
 .primaryCard {
     display: flex;
     justify-content: space-between;
     margin: 50px;
     padding: 20px;
-    -webkit-box-shadow: 0px 0px 10px 2px rgba(139,185,255,0.51);
--moz-box-shadow: 0px 0px 10px 2px rgba(139,185,255,0.51);
-box-shadow: 0px 0px 10px 2px rgba(139,185,255,0.51);
+    -webkit-box-shadow: 0px 0px 10px 2px rgba(139, 185, 255, 0.51);
+    -moz-box-shadow: 0px 0px 10px 2px rgba(139, 185, 255, 0.51);
+    box-shadow: 0px 0px 10px 2px rgba(139, 185, 255, 0.51);
     color: white;
     border-radius: 10px;
 }
@@ -252,11 +253,12 @@ box-shadow: 0px 0px 10px 2px rgba(139,185,255,0.51);
 }
 
 .condition_text {
- font-size: 40px;
- font-weight: bold;
+    font-size: 40px;
+    font-weight: bold;
 }
 
-.date, .time {
+.date,
+.time {
     font-size: 20px;
     color: var(--secondary-color);
 }
@@ -266,9 +268,9 @@ box-shadow: 0px 0px 10px 2px rgba(139,185,255,0.51);
     padding: 20px;
     margin: 0 50px;
     color: white;
-    -webkit-box-shadow: 0px 0px 10px 2px rgba(139,185,255,0.51);
-    -moz-box-shadow: 0px 0px 10px 2px rgba(139,185,255,0.51);
-    box-shadow: 0px 0px 10px 2px rgba(139,185,255,0.51);
+    -webkit-box-shadow: 0px 0px 10px 2px rgba(139, 185, 255, 0.51);
+    -moz-box-shadow: 0px 0px 10px 2px rgba(139, 185, 255, 0.51);
+    box-shadow: 0px 0px 10px 2px rgba(139, 185, 255, 0.51);
     border-radius: 10px;
 }
 
@@ -289,40 +291,44 @@ box-shadow: 0px 0px 10px 2px rgba(139,185,255,0.51);
 }
 
 @media screen and (max-width: 650px) {
-       h3 {
+
+    h3 {
         display: none;
         justify-content: center;
-       }
+    }
 
-       .searchContainer {
+    .searchContainer {
+        flex-direction: column; 
+    }
+
+    .primaryCard {
         flex-direction: column;
-       }
-    
-        .primaryCard {
-            flex-direction: column;
-        }
+        min-height: auto;
+    }
 
-        .cardContent {
-            padding: 0;
-            text-align: center;
-        }
+    .cardContent {
+        padding: 0;
+        text-align: center;
+    }
 
-        .threeDayCard {
-            flex-direction: column;
-        }
+    .threeDayCard {
+        flex-direction: column;
+    }
 
-        .cardOne,
-        .cardTwo,
-        .cardThree {
-            padding: 20px 25px;
-            text-align: center;
-        }
+    .cardOne,
+    .cardTwo,
+    .cardThree {
+        padding: 20px 25px;
+        text-align: center;
+    }
 
-        nav {
-            justify-content: center;
-        }
+    nav {
+        justify-content: center;
+        /* flex-shrink: 0; */
+        padding-top: 100px;
+    }
 
-        form {
-            padding: 50px 0 20px 0;
-        }
+    form {
+        padding: 50px 0 20px 0;
+    }
 }
